--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-git<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <!--
@@ -14,12 +14,8 @@ git<!DOCTYPE html>
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  
- 
-  <base href="https://edanuryaman.github.io/33011456_203301129web/">
-  
-  
-  
+  <base href="/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -27,18 +23,18 @@ git<!DOCTYPE html>
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="enyticaret_33011456_203301129_master_kopya">
+  <meta name="apple-mobile-web-app-title" content="untitled2">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>enyticaret_33011456_203301129_master_kopya</title>
+  <title>untitled2</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1765957446';
+    var serviceWorkerVersion = "1371078428";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
